# bootcamp-cloud

./: README.md
AWS/aula01/: app.py  index.html  readme.md
AWS/aula02/: .gitignore  pyproject.toml  readme.md  requirements.txt
AWS/aula02/arquivos_processados/: file01.csv  file02.csv
AWS/aula02/projeto/: aviso.txt  env.txt  main.py  main_com_try_exceptions.py  main_v2.py  readme.md
AWS/aula03/: .gitignore  readme.md
AWS/aula04/: readme.md
AWS/aula05/: .gitignore  pyproject.toml  readme.md
AWS/aula06/: readme.md
AWS/aula07/: gerador_base.sql  readme.md
AWS/aula08/: Dockerfile  pyproject.toml  readme.md  requirements.txt  spi_scheduler_python_rds_docker.md
AWS/aula08/src/: fetch_1.py  fetch_2.py  fetch_3.py  fetch_4.py  fetch_5.py
AWS/aula09/: readme.md
AWS/aula10/: readme.md
AWS/aula11/: exemplo.py  exemplo_02.py  instalar_packages.text  pyproject.toml  readme.md  requirements.txt
AWS/aula12/: instala_cli.txt  readme.md
AWS/aula13/: consumidor.py  enviando.py  main.py  produtor.py  pyproject.toml  readme.md  recebendo.py
AWS/aula14/: main.py  message_sns.py  pyproject.toml  readme.md  sns.txt
AWS/aula15/: index.html  readme.md
